examples/example-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: example-deployment
  labels:
    app: my-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-deployment
  template:
    metadata:
      labels:
        app: my-deployment
    spec:
      containers:
        - name: deployment-container
          image: nginx:latest
