examples/initcontainer.yaml
# Example using an init container

apiVersion: v1
kind: Pod
metadata:
  name: init-container-example
spec:
  containers:
    - name: main-app
      image: nginx
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
        requests:
          memory: "64Mi"
          cpu: "250m"
