examples/pod-with-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod
  labels:
    name: configmap-demo-pod
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      volumeMounts:
        - mountPath: "/config"
          name: config
          readOnly: true
  volumes:
    - name: config
      configMap:
        name: game-demo
        items:
          - key: "game.properties"
            path: "game.properties"
          - key: "user-interface.properties"
            path: "user-interface.properties"
